k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gym
  labels:
    name: gym
    app: gym-backend
