k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gym-backend
  namespace: gym
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: gym-backend
  template:
    metadata:
      labels:
        app: gym-backend
    spec:
      containers:
        - name: gym-backend
          image: gym-backend
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
