k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gym-backend-service
  namespace: gym
  labels:
    app: gym-backend
spec:
  selector:
    app: gym-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
